# mempalace-rust

./: .gitignore  Cargo.toml  README.md  mempalace.yaml
docs/: benchmarking.md  embeddings.md  init-config-storage.md  mcp.md
src/: artifacts.rs  bench.rs  cli.rs  compression.rs  config.rs  convo.rs  dialect.rs  embedding.rs  extractor.rs  graph.rs  kg.rs  layers.rs  lib.rs  limits.rs  main.rs  mcp.rs  project.rs  search.rs  storage.rs  storage_types.rs  wakeup.rs
tests/: artifacts.rs  benchmark_smoke.rs  compression.rs  config_mining.rs  embedding_config.rs  graph.rs  integration.rs  kg.rs  layers.rs  mcp.rs  search.rs  search_limits.rs
tests/common/: mod.rs
