[package]
name = "mempalace-rust"
version = "0.1.0"
edition = "2021"
description = "Rust migration of MemPalace with SQLite-backed local memory storage"
license = "GPL-3.0-or-later"

[[bin]]
name = "mempalace-rust"
path = "src/main.rs"

[features]
default = []
onnx-embeddings = ["dep:fastembed"]
openai-embeddings = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
ignore = "0.4"
md5 = "0.7"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust-stemmers = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"
fastembed = { version = "4", optional = true, default-features = false }


[dev-dependencies]
tempfile = "3"
